<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/nav_readings"
        android:enabled="true"
        android:icon="@drawable/ic_readings"
        android:title="@string/title_readings" />
    <item
        android:id="@+id/nav_horoscope"
        android:enabled="true"
        android:icon="@drawable/ic_horoscope"
        android:title="@string/title_horoscope" />
    <item
        android:id="@+id/nav_premium"
        android:enabled="true"
        android:icon="@drawable/ic_premium"
        android:title="@string/title_premium" />
</menu>